concord_macros/tests/trybuild/fail/pagination/custom_endpoint_state_missing_bindings_type.rs
use concord_macros::api;

api! {
    client CustomEndpointStateMissingBindingsType {
        base "https://example.com"
    }

    GET List(page: u64 = 1)
        paginate endpoint_state HeaderPagePagination {
            page = page
        }
        -> Json<Vec<String>>
}

fn main() {}
